# RmworldEN_by_day

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  1.1.py  ADULT_CONTENT_SOLUTION.md  Apparel_Various.xml  Day_Translation_函数分类完整报告.md  DefInjected智能选择逻辑详解.md  LOGGING_GUIDE.md  QUICK_START_GUIDE.md  README.md  SIMPLIFIED_INTERRUPT_RESUME_GUIDE.md  TASK_PRIORITY_MATRIX.md  TECHNICAL_IMPLEMENTATION_PLAN.md  TODO_FIX_ADULT_WORDS.md  TODO_TASKS.md  __init__.py  architecture_improvements.md  check_config_changes.py  config_snapshot_current.json  config_snapshot_initial.json  create_test_structure.py  cspell.json  day.1.提取翻译(EN by CN,CSV,,).py  day中英平行语料集检查(tsv).py  day导入翻译(CSV by mod).py  day汉化_机器语言版本(CSV by EN).py  day生成中英平行语料集(EN,mod by tsv).py  demo_all_modes.py  demo_smart_merge.py  demo_smart_output.py  fix_fstring_syntax.py  fix_interaction_manager.py  fix_logging.py  fix_trailing_whitespace.py  framework_integration.md  history.txt  install_dependencies.bat  (+45 more)
Day_translation2/: .gitignore  .pylintrc  README.md  __init__.py  analyze_core_relationships.py  analyze_functions.py  check_function_naming.py  config_refactor_plan.md  conftest.py  debug_imports.py  fix_broken_fstrings.py  fix_mypy_basic.py  fix_mypy_core_issues.py  fix_mypy_errors.py  fix_unnecessary_fstrings.py  import_helper.py  interaction_manager_修复报告.md  main.py  mypy.ini  pyproject.toml  pytest.ini  quality_check.py  remove_trailing_whitespace.py  requirements.txt  run_all_tests.py  setup.py  setup.py.bak  simple_quality_check.py  simple_trailing_whitespace.py  system_function_analysis.json  test_advanced_integration.py  test_basic.py  test_circular_import.py  test_components.py  test_export_integration.py  test_exporters.py  test_imports.py  test_main_flow.py  test_quality_imports.py  test_refactor_validation.py  (+3 more)
Day_translation2/AI_工作记忆/: AI_工作记忆索引.md  代码对比速查表.md  函数迁移追踪表.md  重构关键决策记录.md  重构架构图表指南.md  重构检查清单.md  重构状态仪表板.md
Day_translation2/config/: __init__.py  config_manager.py  config_models.py  data_models.py  unified_config.py  unified_models.py
Day_translation2/constants/: __init__.py  complete_definitions.py  complete_definitions_new.py  field_definitions.py
Day_translation2/core/: __init__.py  exporters.py  extractors.py  generators.py  importers.py  template_manager.py  translation_facade.py
Day_translation2/day_translation2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Day_translation2/docs/: interaction_manager_修复报告.md
Day_translation2/interaction/: __init__.py  interaction_manager.py  unified_interaction.py
Day_translation2/models/: __init__.py  config_models.py  exceptions.py  result_models.py  translation_data.py
Day_translation2/services/: __init__.py  batch_processor.py  config_service.py  (+7 more)
(+1677 files in other folders)
